--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,4 @@
 @import url('styles/themes.css');    
 @import url('styles/responsive.css');
 @import url('styles/animation-utilities.css');
+@import url('styles/enhanced-text-styles.css');
